Try fixing double tap issue on mobile

--- a/style/style-project.css
+++ b/style/style-project.css
@@ -52,14 +52,14 @@ html {
 
 /* Non-touch devices */
 @media (hover: hover) {
-  a:hover {
+  .link:hover {
       /* styles for hover state */
   }
 }
 
 /* Touch devices */
 @media (hover: none) {
-  a:active {
+  .link:active {
       /* styles for active state */
   }
 }
